--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -1,9 +1,11 @@
 # Baldintzak
+
 Uneren batean, programek gauza bat edo beste egin behar dute, baldintza baten arabera. Adibidez, erabiltzaile batek datu oker bat sartzen badu, programa amaitu egingo da. Datu batek balio jakin bat badu, modu batera prozesatzen da, eta bestela, beste batera. Nola lortzen da portaera hori? Baldintzen bidez.
 
 Baldintzak programazio-egiturak dira, eta aukera ematen digute kode bat baldintza batzuk betetzen direnean bakarrik exekutatzeko.
 
 ## if
+
 Baldintza bat egiteko egiturarik sinpleena `ifi 'da, eta itxura hau du:
 
 ```python
@@ -23,12 +25,14 @@ if balioa < 0:
 print ("Balioa 0 baino txikiagoa da")
 print ("Programaren amaiera")
 ```
+
 Honela geratuko litzateke:
 
 ```console
 Balioa 0 baino txikiagoa da
 Programaren amaiera
 ```
+
 Aldiz:
 
 ```python
@@ -48,6 +52,7 @@ Oharra:
 Oso garrantzitsua den zerbait ere kontuan hartu behar duzu: "ifi" aren barruko jarraibideak espazio batzuen edo tabulazio baten atzean daude. Python programazio-lengoaiaren berezitasun bat da hori: edozein bloketan, hala nola baldintza batean, begizta batean, funtzio batean, haren edukiak tabulatuta egon behar du. Modu horrek irakurketa errazten du eta programa baten egitura erraz ezagutzea ahalbidetzen du beste programatzaile batzuentzat. Baita zuretzat ere, zure programa bada.
 
 1.0 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatzen dion eta negatiboa den egiaztatzen duen programa bat. So negatiboa da, mezu bat erakutsi behar duzu kontsola bidez.
 
 ```python
@@ -57,6 +62,7 @@ if int (balioa) < 0:
 print ("Negatiboa da")
 
 ```
+
 Emaitza:
 
 ```console
@@ -80,9 +86,9 @@ Adibidez:
 ```python
 izena = input ("Esadazu zure izena:")
 if izena! = "":
-print ("Kaixo", izena)
-LKse:
-print ("Ez duzu ezer sartu!")
+    print ("Kaixo", izena)
+else:
+    print ("Ez duzu ezer sartu!")
 ```
 
 Horrelako zerbait ikus liteke, erabiltzaileak sartzen duenaren arabera:
@@ -100,15 +106,16 @@ Ez duzu ezer sartu!
 ```
 
 1.1 ariketa
+
 Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "agurra" bada, agur bat adierazi behar duzu; bestela, "ez dut ulertzen" dioen mezu bat erakutsi behar duzu.
 
 ```python
 testua = input ("Idatzi testu bat:")
 
 if testua = = "agurra":
-print ("Kaixo!")
-LKse:
-print ("Ez dut ulertzen. ")
+    print ("Kaixo!")
+else:
+    print ("Ez dut ulertzen. ")
 
 ```
 Emaitza:
@@ -119,17 +126,18 @@ Ez dut ulertzen.
 ```
 
 ## if elif else
+
 Bada beste aldaera bat hainbat baldintza egiaztatu behar ditugunean. Horretarako, if-elif-else egitura dago:
 
 ```python
-if* 1 baldintza*:
-* jarraibideak*
-LKif:* 2. baldintza*:
-* jarraibideak*
-elif* baldintza3*
-* jarraibideak*
-LKse:
-* jarraibideak*
+if *1 baldintza*:
+    *eragiketak*
+elif: *2. baldintza*:
+    *eragiketak*
+elif: *baldintza3*
+    *eragiketak*
+else:
+    *eragiketak*
 ```
 
 Demagun hizkuntza desberdinetan agurtzeko gai den programa bat nahi dugula. Honelako programa bat sor dezakegu:
@@ -138,18 +146,19 @@ Demagun hizkuntza desberdinetan agurtzeko gai den programa bat nahi dugula. Hone
 hizkuntza = input ("Zer hizkuntza hitz egiten duzu?")
 
 if idioma = = "Español":
-print ("Kaixo"):
+    print ("Kaixo"):
 elif idioma = = "Inglés":
-print ("Hello"):
+    print ("Hello"):
 elif idioma = = "Francés":
-print ("Salut")
+    print ("Salut")
 LKse:
-print ("Ez dut hizkuntza hori ezagutzen")
+    print ("Ez dut hizkuntza hori ezagutzen")
 ```
 
 Behar adina `hautetsi 'izan ditzakegu.
 
 1.2 ariketa
+
 Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "bihar" bada, "Egun on" mezua erakutsi behar duzu, testua "berandu" bada, "Arratsalde on" mezua erakutsi behar duzu, eta, bestela, "Gabon" mezua erakutsi behar duzu.
 
 ```python
@@ -165,6 +174,7 @@ LKse:
 print ("Ez dut ulertzen. ")
 
 ```
+
 Emaitza:
 
 ```console
@@ -173,6 +183,7 @@ Arratsalde on.
 ```
 
 1.3 ariketa
+
 Sortu programa bat erabiltzaileari bi balio oso eskatzeko, alderatzeko eta pantaila bidez erakusteko bat bestea baino handiagoa den edo berdinak diren.
 
 ```python
@@ -186,7 +197,9 @@ print (1. zenbakia, "baino txikiagoa da", 2. zenbakia)
 LKse:
 print (1. zenbakia, "berdin da", 2. zenbakia)
 ```
+
 Emaitza:
+
 ```console
 Sartu zenbaki bat: 5
 Sartu beste zenbaki bat: 10
@@ -209,6 +222,7 @@ print (1. zenbakia, "multiploa da", 2. zenbakia)
 LKse:
 print (1. zenbakia, "EZ da multiploa", 2. zenbakia)
 ```
+
 Emaitza:
 
 ```console
@@ -218,7 +232,9 @@ Sartu beste zenbaki bat: 4
 ```
 
 1.1 ariketa
+
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egin hau: lehenik eta behin pantailan erakutsi behar du zenbakia negatiboa edo positiboa den. Gero, zenbakia positiboa bada, negatibo bihurtu behar du, eta negatiboa bada, positibo.
+
 ```python
 numero = input ("Sartu zenbaki bat:")
 kopurua = int (zenbakia)
@@ -232,6 +248,7 @@ numero = -numero
 
 print ("Bihurketa:", zenbakia)
 ```
+
 Emaitza:
 
 ```console
@@ -273,6 +290,7 @@ print ("31 egun")
 LKse:
 print ("Hilabete ezezaguna")
 ```
+
 Emaitza:
 
 ```console
@@ -281,6 +299,7 @@ Sartu urteko hilabete bat: Ekaina
 ```
 
 1.3 ariketa
+
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatzen diona eta pantailan zenbaki hori bikoitia eta positiboa den erakusten duena. Bestela, negatiboa, bakoitia edo biak diren adierazi behar duzu.
 
 ```python
@@ -296,6 +315,7 @@ print (zenbakia, "negatiboa da")
 LKse:
 print (zenbakia, "bakoitia da")
 ```
+
 Emaitza:
 
 ```console
@@ -331,6 +351,7 @@ print ("Gehiegizko pisua duzu")
 LKse:
 print ("Obesitate arazo bat duzu")
 ```
+
 Emaitza:
 
 ```console
@@ -341,7 +362,9 @@ Ondo zaude
 ```
 
 1.5 ariketa
+
 Sortu erabiltzaileari jokalari-dortsal bat eskatzen dion programa bat eta egin hau: egiaztatu zenbaki hori 0 eta 99 artean dagoela. Ez badago, programa errore-mezu batekin amaitu behar da. Zenbakia 0 eta 99 artekoa bada, programak testu bat erakutsi behar du dortsal bakoitzari dagokion posizioarekin:
+
 - Erabiltzaileak 1 tekleatu badu, testua "Atezaina" izango da
 - Erabiltzaileak 1 eta 5 artean tekleatu badu, testua "Defentsa" izango da.
 - Erabiltzaileak 6 eta 8 artean edo 11 tekleatu badu, testua "erdilaria" izango da.
@@ -365,6 +388,7 @@ if zenbakia >= 0 and zenbakia <= 99:
 else:
     print("Errorea, zenbakia ez dago 0 eta 99 artean")
 ```
+
 Emaitza:
 
 ```console
