--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -453,14 +453,14 @@ print ("Kaixo", izena)
 
 Pantailan honako hau ikusiko zenuke:
 
-```code
+```console
 Esadazu zure izena:
 ```
 
 Input funtzioaren ondorioz, pantailan agertzen da "Zure izena adierazi:" mezua. Era berean, programa gelditu egiten da, erabiltzaileak zerbait idatzi arte.
 Erabiltzaileak "Rosa" idazten badu, honela ikusiko da:
 
-```code
+```console
 Esadazu zure izena: Rosa
 Kaixo, Rosa.
 ```
