--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -1,17 +1,19 @@
-#Begiztak
+# Begiztak
 Hasieran esan bezala, ordenagailuak oso tentelak dira. Esaten zaiena egiten dute. Baina, aldiz, gaitasun izugarriak eta pazientzia amaigabea dituzte. Ez zaie batere inportako behar adina aldiz edozer gauza egitea.
 
 Ordenagailu baten zeregin ohikoenetako bat jarraibide bat errepikatzea da. Hori begizta egituren bidez lor daitekeen zerbait da. Begizta ekintza errepikatu bat da. Oro har, begizta batek baldintza bat betetzen du exekutatzeko: baldintza horiek betetzen badira, orduan begizta horrek dituen aginduak exekutatuko dira.
+
 Begizta bat ikus dezakezu, errusiar mendi bat bezala, non buelta batzuk ematen dituzun.
 Jarraian, begizta mota desberdinak ikusiko ditugu.
 
-## Bucle while
+## while begizta
 Baldintza bat betetzen den bitartean, "whilee" begizta exekutatu egiten da. Egitura oso sinplea du:
 
 ```python
 while* baldintza*:
 * jarraibideak*
 ```
+
 Adibidez, begizta bat exekutatuko dugu aldagai baten balioa 0 baino handiagoa den bitartean.
 
 ```python
@@ -20,6 +22,7 @@ while kontagailua > 0:
 print ("Begiztaren barruan nago")
 kontagailua = kontagailua - 1
 ```
+
 Pantailako emaitza hau izango litzateke:
 
 ```console
@@ -32,6 +35,7 @@ Begiztaren barruan nago
 Oharra: Kontuz! Konturatu al zara begiztaren barruan kontagailuari balio bat kentzen ari garela? Kontuz ez bagabiltza eta hori egitea ahazten badugu, kontagailuaren balioa ez litzateke inoiz aldatuko eta bukle infinitua sortuko genuke. Programa ez litzateke inoiz amaituko eta betiko trabatuta geratuko litzateke!
 
 2.0 ariketa
+
 Sortu 0an hasitako kontagailu-aldagai bat definituko duen programa bat. Ondoren, idatzi while begizta bat. Kontagailua 5 baino txikiagoa den bitartean, erakutsi mezu hau: `Estoy en el bucle«eta gehitu» kontagailu 1.
 
 ```python
@@ -50,6 +54,7 @@ Begiztaren barruan nago
 Begiztaren barruan nago
 Begiztaren barruan nago
 ```
+
 Ikus dezagun beste adibide bat. Hurrengo programak datu bat eskatzen dio erabiltzaileari begizta batean. Programa ez da begiztatik aterako erabiltzaileak hutsuneari buruzko beste datu bat sartzen ez duen bitartean:
 
 ```python
@@ -61,6 +66,7 @@ print ("Kaixo", izena)
 ```
 
 2.1 ariketa
+
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Lehenak bigarrena baino txikiagoa izan behar du. Begiztak bi zenbaki horien arteko tartean dauden zenbakiak erakutsi behar ditu.
 
 ```python
@@ -74,6 +80,7 @@ while min < max:
 print (min)
 min = min + 1
 ```
+
 Emaitza:
 
 ```console
@@ -86,21 +93,25 @@ Sartu gehienez: 8
 7
 ```
 
-## Begizta For
+## For begizta
+
 Begizta for ekintza bat errepikatzeko erabiltzen dugu. Baldintza bat baino gehiago, kontagailu moduko bat erabiltzen du:
 
 ```python
 for* aldakorra* in* tartea*:
 * jarraibideak*
 ```
+
 Adibidez, honako begizta honek "hola" mezua 4 aldiz erakutsiko du:
 
 ```python:
 for i in range (4):
 print ("Kaixo")
 ```
+
 Hona hemen emaitza:
-```code
+
+```console
 Kaixo
 Kaixo
 Kaixo
@@ -116,15 +127,17 @@ print ("Kaixo", i)
 
 Eta emaitza egiaztatu:
 
-```code
+```console
 Kaixo 0
 Kaixo 1
 Kaixo 2
 Kaixo 3
 ```
+
 Hori baliagarria izan dakiguke programa askotan.
 
 2.2 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, 0tik 10era biderkatzeko taula erakusten duena.
 
 ```python
@@ -136,6 +149,7 @@ print (balioa, "x", i, "=", (balioa* i))
 #Alternatibak:
 #print (" % d x % d = % d" % (balioa, i, balioa* i))
 ```
+
 Emaitza:
 
 ```console
@@ -147,6 +161,7 @@ Sartu zenbaki bat: 3
 ```
 
 2.3 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. 0 edo txikiagoa bada, zerbait handiagoa sartzeko adierazi behar duzu, eta bestela, "Python mola!" mezua erakutsi behar duzu pantailan, zenbakiak adierazten duen adina aldiz:
 
 ```python
@@ -159,6 +174,7 @@ LKse:
 for i in range (0, zenbakia):
 print ("Python mola!")
 ```
+
 Emaitza:
 
 ```console
@@ -168,7 +184,8 @@ Python mola!
 Python mola!
 ```
 
-##  #Tartea aldatu
+## Tartea aldatu
+
 Lehenetsita, "range (4)" 0tik 3ra bitarteko zerrenda itzultzen ari da, hau da: 0, 1, 2, 3. Lau elementu dira guztira eta, beraz, begiztak lau buelta emango ditu.
 
 Jakina, edozein maila mota sor daiteke. Ezer adierazten ez bada, tartea 0an hasten da. Baina bi zenbakiren arteko tartea adieraz daiteke:
@@ -181,8 +198,10 @@ Adibidez:
 for i in range (5, 9):
 print ("Kaixo", i)
 ```
+
 Hona hemen emaitza:
-```code
+
+```console
 Kaixo 5
 Kaixo 6
 Kaixo 7
@@ -190,23 +209,28 @@ Kaixo 8
 ```
 
 Hirugarren parametro bat ere adieraz daiteke, balio batetik bestera nola salto egiten den adierazteko. Adibidez, 2tik 2ra:
+
 ```python
 range (1, 11, 2) # 1, 3, 5, 7, 9
 ```
 
 Hurrengo adibidean, begizta zenbaki bikoitiekin egingo litzateke.
+
 ```python:
 for i in range (0, 6, 2):
 print ("Kaixo", i)
 ```
+
 Hona hemen emaitza:
-```code
+
+```console
 Kaixo 0
 Kaixo 2
 Kaixo 4
 ```
 
-##  #Atzerantz
+## Atzerantz
+
 Begizta atzerantz ere ibil daiteke, jauzi negatiboa eginez:
 
 ```python:
@@ -217,7 +241,7 @@ print (i)
 
 Hona hemen emaitza:
 
-```code
+```console
 5
 4
 3
@@ -226,6 +250,7 @@ Hona hemen emaitza:
 ```
 
 2.4 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, 0tik erabiltzaileak sartu duen zenbakira arteko zenbaki bikoiti guztiak erakutsi behar ditu. Erabili `formako 'begizta eta egin salto binaka.
 
 ```python
@@ -235,6 +260,7 @@ balioa = int (balioa)
 for i in range (0, balioa, 2):
 print (i)
 ```
+
 Emaitza:
 
 ```console
@@ -244,14 +270,16 @@ Sartu zenbaki bat: 5
 4
 ```
 
-##  #Zerrenden gaineko begiztak
-Begizta `indartsuak 'bereziki erabilgarriak dira zerrenda bateko elementu guztiak aztertu nahi ditugunean, erakusteko, prozesatzeko edo dena delakoa. Forma oso erraza da:
+## Zerrenden gaineko begiztak
+
+Begizta bereziki erabilgarriak dira zerrenda bateko elementu guztiak aztertu nahi ditugunean, erakusteko, prozesatzeko edo dena delakoa. Forma oso erraza da:
 
 ```python
 objektuak = ["izarra", "perretxikoa", "lorea"]
 for objektua in objektuak:
 print (objektuak)
 ```
+
 Begiztaren buelta bakoitzean, "objektu" aldagaiak balio bat hartuko du "objektu" zerrendatik, eta, beraz, emaitza hau izango da:
 
 ```console
@@ -260,7 +288,8 @@ perretxikoa
 lorea
 ```
 
-Begiztatik irteten
+## Begiztatik irteten
+
 Batzuetan, baliteke begizta batetik irten eta beste ezer prozesatzen ez jarraitzea. Demagun zerrenda baten barruan izen bat bilatzeko programa bat dugula:
 
 ```python
@@ -282,6 +311,7 @@ break
 ```
 
 2.5 ariketa
+
 Idatzi 3 zenbakidun zerrenda bat zehazten duen programa bat. Ondoren, sortu begizta for bat, zerrenda gainditu eta zenbakiak adierazten duen beste aldiz errepikatuko duena.
 
 ```python
@@ -291,6 +321,7 @@ for aldiz in errepikatu:
 for i in range (batzuetan):
 print ("Python")
 ```
+
 Emaitza:
 
 ```console
@@ -301,7 +332,8 @@ Python
 ...
 ```
 
-Noiz erabili while edo for?
+## Noiz erabili while edo for?
+
 Biekin gauza bera egin zenezakeen arren, bakoitzak erabilera logikoagoa du.
 
 Begizta hau argi eta garbi erabiltzen da zerbait exekutatu nahi denean, ez gehiago, ez gutxiago. Edo, aurrerago ikusiko dugun bezala, datu-egiturak hasieratik amaierarainoko zerrendetan sartu nahi direnean.
@@ -311,6 +343,7 @@ Baldintzak oso zehatzak ez direnean erabil daiteke `whilee 'begizta. Adibidez, e
 ## Proposatutako ariketak
 
 2.0 ariketa
+
 Idatzi programa bat "whilee" begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, "Ada") eta "Kaixo Ada" izen hori agurtzeko. "Irten" testua sartuz gero, buklea amaitu egin behar da.
 
 ```python
@@ -323,6 +356,7 @@ print ("Kaixo", izena)
 print ("Amaiera. ")
 
 ```
+
 Emaitza:
 
 ```console
@@ -335,6 +369,7 @@ Amaiera.
 ```
 
 2.1 ariketa
+
 Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen dion eta zenbakia 0 ez den bitartean amaitzen ez duen "whilee" begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen beste aldiz. Zenbakia 0 baino txikiagoa bada, begizta "break" batekin amaitu behar da;
 
 ```python
@@ -349,6 +384,7 @@ break
 for i in range (balioa):
 print ("Kaixo")
 ```
+
 Emaitza:
 
 ```console
@@ -360,8 +396,10 @@ Sartu zenbaki bat: -1
 ```
 
 2.2 ariketa
+
 Sortu erabiltzaileari balio oso bat eskatzen dion programa bat, egiaztatu 0 baino handiagoa den eta, gainera, bikoitia den. Hala bada, bistaratu pantailan zenbakiaren balioa adina aldiz karaktere* Erabili `print ("*")
 Adibidez, 8 sartuz gero, hau erakutsiko du:
+
 ```console
 *******
 ```
@@ -382,13 +420,16 @@ numero = numero - 1
 
 print (izarrak)
 ```
+
 Emaitza:
 
 ```console
 Sartu zenbaki bat: 6
 *****
 ```
+
 2.3 ariketa
+
 Sortu aurrekoaren antzeko proiektu bat, pare positiboak bakarrik onartu behar dituena, baina erakutsi behar duzun ildoak alderdi hau izan behar du:
 
 2:
@@ -414,13 +455,16 @@ sekuentzia = sekuentzia + "*"
 
 print (sekuentzia)
 ```
+
 Emaitza:
 
 ```console
 Sartu zenbaki bat: 8
 - -* -* -* -*
 ```
+
 2.4 ariketa
+
 Erabiltzaileari zenbaki oso bat eskatzen dion programa bat sortzen du, eta balio hori erabiliz, «marraztu» egin behar du kontsolan «*» lauki bat.
 Adibidez, 4 sartuz gero, hau erakutsiko da:
 
@@ -447,6 +491,7 @@ izarrak = izarrak + "\n"
 
 print (izarrak)
 ```
+
 Emaitza:
 
 ```console
@@ -454,7 +499,9 @@ Sartu zenbaki bat: 2
 **
 **
 ```
+
 2.5 ariketa
+
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatu eta haren faktoria kalkulatzeko. Adibidez, 5eko faktoria 5 x 4 x 3 x 2 x 1 = 120 izango litzateke.
 
 ```python
@@ -471,12 +518,14 @@ factorial = factorial* numero
 
 print ("Emaitza:", faktoria)
 ```
+
 Emaitza:
 
 ```console
 Sartu zenbaki bat: 4
 Emaitza: 24
 ```
+
 2.6 ariketa
 
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori lehengusua den ala ez, hau da, berez edo 1egatik zatigarria den.
@@ -503,13 +552,16 @@ print (jatorrizkoa, "lehengusua da. ")
 LKse:
 print (jatorrizkoa, "EZ da lehengusua. ")
 ```
+
 Emaitza:
 
 ```console
 Sartu zenbaki bat: 5
 5 lehengusua da.
 ```
+
 2.7 ariketa
+
 Sortu 0tik 10era biderkatzeko taula guztiak erakusten dituen programa bat.
 
 ```python
