--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -1,20 +1,24 @@
-#Datu-egiturak
+# Datu-egiturak
+
 Orain arte datu sinpleekin, zenbaki bat, testu bat eta abar duten aldagaiekin jolasten aritu gara. Baina badira datu konplexuagoak sortzeko aukera ematen diguten beste mota batzuk ere. Ez dira zailak, zenbaki soil bat baino zerbait gehiago eduki dezakete.
 
 Ordenagailu-programek oso gauza zailak egin ditzakete, baina, funtsean, datuak prozesatzen dituzte. Eta askotan, datu horiek sekuentzia luzeetan datoz. Jarraian, datu mota horietako batzuk ikusiko ditugu.
 
 ## Zerrendak
+
 Zerrendak zenbakiz indexatutako datu-multzo bat dira. Hori da definizio oso formala, baina izenak berak esaten dizu zer diren: zerrenda bat! Datu motei buruzko kapituluan zerrendak aurkeztu genituen eta nola sortzen diren ikusi genuen:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 ```
+
 Gogoratu aurkibide baten bidez eskura ditzakezula elementuak:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 print (hizkuntzak [2]) #Frantsesa
 ```
+
 Zerrenda honela adieraz daiteke:
 
 | 0 | 1 | 2 |
@@ -22,6 +26,7 @@ Zerrenda honela adieraz daiteke:
 | "Ingelesa" | "Gaztelania" | "Frantsesa" |
 
 3.0 ariketa
+
 Definitu izenen zerrenda bat eta erakutsi pantaila bidez:
 
 ```python
@@ -30,6 +35,7 @@ izenak = ["Ada", "Bug", "Neko"]
 print (izenak) # ["Ada", "Bug", "Neko"]
 
 ```
+
 Emaitza:
 
 ```console
@@ -37,6 +43,7 @@ Emaitza:
 ```
 
 3.1 ariketa
+
 Sortu programa bat 5 zenbaki hamartarrekin definitzeko. Gero, sortu begizta bat zenbaki guztien batez bestekoa kalkulatzeko.
 
 ```python
@@ -50,6 +57,7 @@ batez bestekoa = batuketa/len (zenbakiak)
 
 print ("Batez bestekoa da:", media)
 ```
+
 Emaitza:
 
 ```console
@@ -57,6 +65,7 @@ Batez bestekoa: 5.06000000000005
 ```
 
 ## Zerrendatik zatiak atera
+
 Zenbakizko indizea erabiliz, zerrenda baten zatiak atera daitezke, zerrenda horren azpi-zerrenda bat sortuz. Adibidez, "zerrendako lehen hiru balioak nahi ditut", "4. zenbakitik 6.era" edo "azken biak nahi ditut". Horretarako, nahikoa da indize-tarte bat adieraztea:
 
 ```python
@@ -64,24 +73,30 @@ zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 zenbakiak [0:4] # [1, 2, 3, 4]
 zenbakiak [5:8] # [6, 7, 8]
 ```
+
 Lehen elementuak ere atera daitezke:
+
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 [: 6] # [1, 2, 3, 4, 5, 6] zenbakiak
 ```
 
 Edo azken balioak
+
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 [-4:] # [6, 7, 8, 9] zenbakiak
 ```
+
 Edo, besterik gabe, azkena:
+
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
 [-1] zenbakiak # [9]
 ```
 
 ## Elementuak gehitu eta ezabatu
+
 Zerrenda bati elementu bat gehitu nahi badiogu, nahikoa da funtzio hau erabiltzea:
 
 ```python
@@ -120,12 +135,14 @@ hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 for i in range (len (hizkuntzak)):
 print (hizkuntzak [i])
 ```
+
 Dena den, indizea begiztaren barruan behar ez bada, hobe da zerrenda indizerik gabe egitea, aurreko adibidean egiten den bezala.
 
 Beste hizkuntza batzuetan, zerrendei "array" esaten zaie.
 Ezagutu beharko zenituzke, baina berriro gogoratuko dizugu.
 
 3.2 ariketa
+
 Definitu izenen zerrenda bat, erakutsi pantaila bidez. Gehitu elementu bat eta erakutsi zerrenda pantailaz pantaila. Ondoren, zerrendatik elementu bat ezabatu eta zerrenda pantailaz pantaila erakusten du.
 
 ```python
@@ -140,6 +157,7 @@ izenak [1]
 
 print (izenak)
 ```
+
 Emaitza:
 
 ```console
@@ -149,6 +167,7 @@ Emaitza:
 ```
 
 ## Hiztegiak
+
 Hiztegiak datu-multzoak dira, eta elementu bakoitzak gako bat eta balio bat ditu.
 Beste era batera esanda, zerrenda bat bezalakoak dira, baina 0,1, 2... zenbaki-indizea izan beharrean, zuk nahi duzun balioa dute.
 
@@ -158,13 +177,16 @@ Adibidez, hiztegi bat defini dezakegu, hainbat pertsonaren adinak biltzen dituen
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 print (adinak ["Ada"]) # 14
 ```
+
 Hiztegia honela adieraz daiteke:
 
 | "Ada" | "Bug" | "Neko" |
 | -- | -- | -- |
 | 14 | 10 | 2 |
 
+
 3.3 ariketa
+
 Defini ezazu telefonoak izeneko hiztegi bat, non lagun pare baten telefonoak gordeko dituzun. Gakoa lagunaren izena izango da, eta balioa, berriz, telefono-zenbakia.
 
 ```python
@@ -174,6 +196,7 @@ print (telefonoak)
 for izena in telefonos.keys ():
 print (izena, telefonoak [izena])
 ```
+
 Emaitza:
 
 ```console
@@ -202,8 +225,11 @@ print (izena, adinak [izena])
 ```
 
 3.4 ariketa
+
 Erabili aurreko ekitaldiko telefonoen hiztegia. Eskatu erabiltzaileari datuak hiztegian beste sarrera bat sartzeko: izena eta telefonoa eskatu beharko dituzu, eta gero hiztegira gehitu.
+
 Amaieran, hiztegiko elementu guztiak erakusten ditu.
+
 ```python
 telefonoak = {"Ada": 66555333, "Bug": 111000111}
 
@@ -216,6 +242,7 @@ for izena in telefonos.keys ():
 print (izena, telefonoak [izena])
 
 ```
+
 Emaitza:
 
 ```console
@@ -227,6 +254,7 @@ Bug 111000111
 ```
 
 Hiztegiko balioak ezabatu ditzakegu, honako funtzio honekin:
+
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14}
@@ -242,6 +270,7 @@ adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 for izena in edades.keys ():
 print (izena, adinak [izena])
 ```
+
 Pantailaren arabera:
 
 ```console
@@ -251,8 +280,10 @@ Neko 2
 ```
 
 3.5 ariketa
+
 Erabili aurreko ekitaldiko telefonoen hiztegia. Eskatu erabiltzaileari izen bat, eta gero kendu elementu hori hiztegitik.
 Amaieran, hiztegiko elementu guztiak erakusten ditu.
+
 ```python
 telefonoak = {"Ada": 66555333, "Bug": 111000111}
 
@@ -263,6 +294,7 @@ telefonoak [izena]
 for izena in telefonos.keys ():
 print (izena, telefonoak [izena])
 ```
+
 Emaitza:
 
 ```console
@@ -274,6 +306,7 @@ Oharra:
 Beste hizkuntza batzuetan, hiztegiei `hash 'edo `hashtables' esaten zaie.
 
 ## Datu konbinatuen egiturak
+
 Oinarrizko egiturek, hala nola zerrendek eta hiztegiek, zerrendak eta hiztegiak ere izan ditzakete!
 
 Datu-egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun baten datuak hiztegi honekin irudikatu nahi dituzula:
@@ -281,6 +314,7 @@ Datu-egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun bate
 ```python
 laguna = {"izena": "Neko", "adina": 2}
 ```
+
 Eta hainbat lagun izango dituen datu-egitura bat izan nahi baduzu? Kasu horretan, hiztegien zerrenda egin dezakezu:
 
 ```python
@@ -292,7 +326,9 @@ lagunak = [
 print (lagunak [1]) # {"izena": "Bug", "adina": 10}
 print (lagunak [2] ["izena"]) #Ada
 ```
+
 3.6 ariketa
+
 Idatzi bezeroa izeneko hiztegi-zerrenda bat zehazten duen programa bat, gakoak dituena: izena, emaila eta adina. Programak zerrenda egin behar du eta bezero bakoitzaren izena eta adina erakutsi.
 
 ```python
@@ -317,6 +353,7 @@ bezeroak = [
 for bezeroa in bezeroak:
 print (f "{bezeroa ['izena']} {bezeroa ['adina']}")
 ```
+
 Emaitza:
 
 ```console
@@ -324,6 +361,7 @@ Juan 39
 Pedro 42
 Ana 37
 ```
+
 Eta joko baten egoera, pertsonaiak eta objektuak bilduko dituen datu-egitura bat nahi baduzu? Hiztegi habiatu bat egin nezake, non gakoa pertsonaiaren izena den:
 
 ```python
@@ -338,17 +376,20 @@ print (pantaila ["Luigi"] ["bizitza"]) # 7
 
 Baina nola dakit zer egitura mota diseinatu behar dudan? Nola erabiliko duzun. Batzuetan denak ibili beharko dituzu, beste batzuetan elementu jakin bat eskuratu beharko duzu... zure programak eskatzen duenaren arabera, egitura jakin bat diseinatu beharko duzu.
 
-#Textos
-Testu-datu mota, katea edo* string* ere deitua, funtsezkoa da programetan. Horregatik, erabilgarritasun asko ditu datu mota horiek errazago erabiltzeko.
+# Testuak
+
+Testu-datu mota, katea edo *string* ere deitua, funtsezkoa da programetan. Horregatik, erabilgarritasun asko ditu datu mota horiek errazago erabiltzeko.
 Jarraian, testuetarako baliagarriak diren zenbait funtzio ikusiko ditugu, baina, aurretik, testuari buruzko zerbait azaltzea komeni da:
 
 ## Testuak zerrendak dira
+
 Izan ere, ordenagailuarentzat, testu bat zerrenda bat bezalakoa da. Letra-zerrenda edo -katea, eta honela tratatu dezakegu:
 
 ```python
 testua = "Kaixo naiz Ada"
 testua [1] # "o"
 ```
+
 Testua zerrenda bat balitz bezala ere ibil dezakegu:
 
 ```python
@@ -357,8 +398,10 @@ testua = "Ada"
 for caracter in texto:
 print (karaktere)
 ```
+
 Irteera hau izango litzateke:
-```
+
+```console
 A
 d
 a
@@ -370,6 +413,7 @@ Testu baten luzera ere jakin dezakegu, `len ()» funtzioarekin:
 testua = "Neko maulla"
 len (testua) # 11
 ```
+
 Baina zalantzarik izanez gero, interesgarriena da testutik nahi dugun zatia atera dezakegula, hasiera eta amaiera adierazita:
 
 ```python
@@ -377,24 +421,30 @@ testua = "Python mola"
 testua [0:6] # "Python"
 testua [7:12] # "mola"
 ```
+
 Lehen karaktereak ere atera daitezke
+
 ```python
 testua = "Python mola"
 testua [: 6] # "Python"
 ```
 
 Edo azken karaktereak
+
 ```python
 testua = "Python mola"
 testua [-4:] # "mola"
 ```
+
 Edo, besterik gabe, azkena:
+
 ```python
 testua = "Python mola"
 [-1] # "a" testua
 ```
 
 ## Letra larriak/Letra xeheak
+
 Zenbait funtzio ditugu testua letra larriz edo xehez idazteko:
 
 ```python
@@ -411,12 +461,14 @@ texto.title () #Hau Esaldi bat da
 ```
 
 ## split: testutik zerrendara
+
 split funtzio interesgarria da testu bat zatika zatitzea eta zerrenda bihurtzea:
 
 ```python
 testua = "zatoz nirekin, bizi nahi baduzu"
 hitzak = testua.split () # ["zatoz", "nirekin", "bai", "nahi duzu", "bizi"]
 ```
+
 Besterik ezean, splita testuaren espazioetan mozten da. Baina beste edozein bereizle adieraz daiteke, adibidez:
 
 ```python
@@ -425,6 +477,7 @@ izenak = testua.split (";") # [Ada "," Neko "," Bug "]
 ```
 
 ## Bilaketak
+
 Batzuetan, testu baten barruan hitz bat bilatzea gustatuko zaigu. Horretarako, find funtzioa erabil dezakegu. Hitza aurkituz gero, hitz hori zein posiziotan hasten den erakutsiko du. Aurkitzen ez baduzu, itzuli `-1.
 
 ```python
@@ -443,6 +496,7 @@ hasi = hitza.startswith ("es") #False
 ```
 
 Testu bat modu batean amaitzen den jakin nahi badugu, berriz, `endswith ()» erabil daiteke:
+
 ```python
 hitzak = "Python hizkuntza ona da"
 acaba = palabra .endswith ("aje") #True
@@ -450,6 +504,7 @@ acaba = palabra .startswith ("ajes") #False
 ```
 
 ## Soberakinak ezabatu
+
 Testuak zuriuneekin edo ezabatu nahi ditugun beste karaktere batzuekin has edo buka daitezke, esaterako, lerro-jauziekin. Testu batetik soberan dauden zati horiek kentzeko, honako funtzio hauek erabil daitezke.
 
 lstrip () -ekin, testuaren hasieran espazioak ezabatzen dira:
@@ -467,6 +522,7 @@ garbia = testua.rstrip () # "Espazioak ditut"
 ```
 
 Eta strip () delakoarekin bi aldeetako espazioak kenduko ditugu:
+
 ```python
 testua = "Espazioak ditut"
 garbia = testua.strip () # "Espazioak ditut"
@@ -478,6 +534,7 @@ Besterik ezean, espazioak kentzen dira, baina kendu nahi dugun edozein testu adi
 testua = "--Arloi-testua"
 garbia = testua.lstrip ("-") # "Testua gidoiarekin"
 ```
+
 Fitxategi batetik edo kontsolatik testua irakurtzen dugunean ere, lerro-jauziak egiten ditugu:
 
 ```python
@@ -488,6 +545,7 @@ garbia = testua.rstrip ("\n")
 ## Proposatutako ariketak
 
 3.0 ariketa
+
 Idatz ezazu 5 zenbakiko zerrenda bat hasten duen programa bat (0ra hasitakoak), eskuz hasitako 5 izeneko beste bat eta 5 boolear balioko beste bat (false erara hasitakoak)
 
 ```python
@@ -499,6 +557,7 @@ print (izenak)
 print (zenbakiak)
 print (boolearrak)
 ```
+
 Emaitza:
 
 ```console
@@ -508,6 +567,7 @@ Emaitza:
 ```
 
 3.1 ariketa
+
 Idatzi 10 zenbakiko zerrenda bat zehazten duen programa bat. Ondoren, begizta bat sortu behar duzu,** posizio bikoitietan 0 bat sartzeko.
 
 ```python
@@ -526,6 +586,7 @@ Emaitza:
 ```
 
 3.2 ariketa
+
 Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen menu bat erakusteko: (1) elementua sartu, (2) ezabatu, (3) erakutsi eta (4) irten. Menua erabiltzaileak 4. aukera sartzen ez duen bitartean erakutsi behar da. 1. aukera aukeratuz gero, edozein balioko push egingo da, 2 aukeratuz gero, pop egingo da, eta 3 aukeratuz gero, zerrendako edukia agertuko da.
 
 ```python
@@ -551,6 +612,7 @@ print ("Beste batera arte")
 LKse:
 print ("Aukera ezezaguna")
 ```
+
 Emaitza:
 
 ```console
@@ -564,6 +626,7 @@ Aukera ezazu: 3
 ```
 
 3.3 ariketa
+
 Idatzi erabiltzaileari hitzak eskatu eta esaldi bat eraikitzeko kateatzen dituen programa bat, erabiltzaileak puntu bat idatzi arte (.). Orduan programak sortutako esaldia erakutsi beharko du. Erabiltzaileak ez badu ezer idazten, ez da ezer kateatu behar.
 
 ```python
@@ -578,6 +641,7 @@ esaldia = esaldia + "" + hitza
 
 print ("Sortutako esaldia:", esaldia)
 ```
+
 Emaitza:
 
 ```console
@@ -589,6 +653,7 @@ Kaixo, zer moduz?
 ```
 
 3.4 ariketa
+
 Idatzi programa bat erabiltzaileari bere izena, jaioterria eta jaioturtea eskatzeko. Ondoren, esaldi bat erakutsi behar duzu informazio horrekin guztiarekin, interpolazioa edo kate-txantiloiak erabiliz.
 
 ```python
@@ -599,6 +664,7 @@ mezua = f "{izena} duzu izena {lekua} (e) n jaio zinen {data}"
 
 print (mezua)
 ```
+
 Emaitza:
 
 ```console
@@ -609,6 +675,7 @@ Ada duzu izena, Tevergan jaio zinen 2006an.
 ```
 
 3.5 ariketa
+
 Idatzi erabiltzaileari esaldi bat eskatzen dion programa bat. Gero esaldi horretako hitz bat eskatu behar du, eta, ondorioz, programak esaldi bera itzuliko du letra larriz:
 
 ```python
@@ -626,6 +693,7 @@ print (emaitza)
 LKse:
 print (hitza, "ez dago esaldian. ")
 ```
+
 Emaitza:
 
 ```console
@@ -635,6 +703,7 @@ Zein ona den profa Ada
 ```
 
 3.6 ariketa
+
 Sortu 5 izeneko zerrenda bat definitzen duen programa bat eta, ondoren, erabili begizta bat izenak banan-banan erakusteko.
 
 ```python
@@ -648,6 +717,7 @@ for i in range (len (izenak)):
 print (izenak [i])
 
 ```
+
 Emaitza:
 
 ```console
@@ -659,6 +729,7 @@ Bilbo
 ```
 
 3.7 ariketa
+
 Sortu 10 zenbaki osoko zerrenda bat zehazten duen programa bat. Gero, beste begizta bat sortzen du, elementu bakoitza handitu eta erakusteko.
 
 ```python
@@ -672,12 +743,15 @@ print (zenbakiak)
 #Batuketarako alternatiba:
 #Gehituak = ugari.map (zenbakia = > zenbakia + 1)
 ```
+
 Emaitza:
 
 ```console
 [4, 6, -3, 3, 2, 5, 1, 7, 10, 9, 4]
 ```
+
 3.8 ariketa
+
 Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen zehazteko. Errepikatutako bat aurkitzea nahikoa da.
 
 ```python
@@ -699,12 +773,15 @@ print ("Zenbaki bat errepikatuta dago")
 LKse:
 print ("Ez dago zenbaki errepikaturik")
 ```
+
 Emaitza:
 
 ```console
 Zenbaki errepikatua dago
 ```
+
 3.9 ariketa
+
 Sortu 10 zenbaki osorekin hasitako zerrenda bat definituko duen programa bat. Gero, beste begizta bat sortu, zenbaki positiboak, negatiboak eta 0 direnak zenbatuko dituena.
 
 ```python
@@ -726,6 +803,7 @@ print ("Positiboak:", positiboak)
 print ("Negatiboak:", negatiboak)
 print ("Zeroak:", zeroak)
 ```
+
 Emaitza:
 
 ```console
@@ -735,12 +813,15 @@ Zeroak: 1
 ```
 
 3.10 ariketa
+
 Sortu 5x10 elementuko bi dimentsioko zerrenda bat definituko duen programa bat. Zerrendako balioak ausazko zenbakiak erabiliz hasten dituen begizta bat sortzen du.
 Zenbaki aleatorioak sortzeko, `random«eta random.randint ()» funtzioa erabiltzen du liburutegiak, hemen erakusten den bezala:
+
 ```python
 import random
 random.randint (0, 30); # 0 eta 30 arteko ausazko zenbakia
 ```
+
 Horren ondoren, sortu beste begizta bat, elementuren batean 15 zenbakia aurkituz gero begizta eten eta zer posiziotan dagoen erakutsiko duena.
 
 ```python
@@ -764,6 +845,7 @@ print ("Aurkitu 15 in", i,)
 ```
 
 3.11 ariketa
+
 Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen proiektu bat. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak aztertzen ditu, indizeetan aurreko ekitaldiko "random," metodoa erabiliz. Gero emaitza erakusten du.
 
 ```python
@@ -781,6 +863,7 @@ zenbakiak [ausazko aurkibidea] = aurrekoa
 
 print (zenbakiak)
 ```
+
 Emaitza:
 
 ```console
