--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -796,7 +796,7 @@ Desberdinak dira? Falsea
 
 Eragile boolearrek aukera ematen digute eragiketak egiteko balio boolearrekin `True`edo `Falseere.
 
-##  #and
+## and
 Operadore horrek `Trueu 'itzuliko du, baldin eta bi operadoreak ere `Trueu:
 
 ```python
@@ -831,7 +831,7 @@ Sartu zenbaki bat: 14
 Parea eta positiboa da? True
 ```
 
-##  #or
+## or
 Operadore horrek honako hauek ere itzultzen ditu: `Trueu, baldin eta** edozein**, eta hauek ere bai:
 
 ```python
@@ -868,7 +868,7 @@ Sartu beste zenbaki bat: 6
 Bietako bat positiboa da? True
 ```
 
-##  #not
+## not
 Operadore horrek kontrako balioa itzultzen du eragiketan. Aplikatzen bazaio, itzuli `Frueere 'ri, eta aplikatzen bazaio, itzuli `Falseere' ri:
 
 ```python
@@ -902,7 +902,7 @@ Sartu zenbaki bat: -4
 Ez al da bikoitia eta positiboa? True
 ```
 
-##  #Operadoreak konbinatzen
+## Operadoreak konbinatzen
 Operadoreak behar adina konbina ditzakegu:
 
 ```python
