--- a/book_eu/04.md
+++ b/book_eu/04.md
@@ -1,10 +1,12 @@
-#Funtzioak
+# Funtzioak
+
 Funtzioak programa txikiak dira programen barruan. Funtzio horrek pantailan agur bat besterik ez du ateratzen:
 
 ```python
 def agurra ():
 print "Kaixo"
 ```
+
 Ikus daitekeenez, funtzio bat definitzeko, `def, 'hitza erabiltzen da, eta, ondoren, funtzioaren izena, kasu honetan, `osasuna' eta "()" parametroen zerrenda, kasu honetan hutsik dagoena.
 Funtzioaren gorputzean, nahi ditugun jarraibideak jar ditzakegu.
 
@@ -15,12 +17,15 @@ Funtzio hori definitu ondoren, funtzio hori erabiltzen dugun bakoitzean, funtzio
 ```python
 agurra ()
 ```
+
 Horrek erakutsiko du:
+
 ```console
 Kaixo
 ```
 
 4.0 ariketa
+
 Idatzi programa bat hiru emanaldirekin: egunak, arratsaldeak eta gauak. Bakoitzak agur desberdina egin behar du: "Egun on", "Arratsalde on" eta "Gabon", hurrenez hurren. Gehitu hiru funtzioetarako deiak.
 
 ```python
@@ -37,6 +42,7 @@ egunak ()
 arratsaldez ()
 gauak ()
 ```
+
 Emaitza:
 
 ```console
@@ -54,6 +60,7 @@ Adibidez, norbait agurtzen duen funtzio bat sor dezakegu:
 def saluda (pertsona):
 print ("Kaixo", pertsona)
 ```
+
 Funtzioaren barruan, pertsonen balioa desberdina izango da deian ematen zaionaren arabera.
 Honela erabil liteke:
 
@@ -61,6 +68,7 @@ Honela erabil liteke:
 agur ("Neko") #pertsona izango da "Neko"
 agur ("Ada") #pertsona izango da "Ada"
 ```
+
 Hona hemen horren emaitza:
 
 ```
@@ -69,6 +77,7 @@ Kaixo Ada
 ```
 
 4.1 ariketa
+
 Idatz ezazu programa bat "laukia" izeneko funtzio batekin, eta parametro hau izango du: Funtzioak emaitza biderkatu eta pantaila bakoitzean erakutsi behar du.
 
 ```python
@@ -77,13 +86,15 @@ print (a* a)
 
 karratua (3)
 ```
+
 Emaitza:
 
 ```console
 9
 ```
 
-##  #Lehenetsitako balioa duen parametroa
+## Lehenetsitako balioa duen parametroa
+
 Funtzio baten parametroek lehenetsitako balioa izan dezakete. Hau da, balio jakin bat esleitu ahal zaie, eta deian parametro hori pasatzen ez bada, parametroak balio hori lehenetsiko du.
 
 ```python
@@ -91,12 +102,15 @@ def agur (pertsona, batzuetan = 3):
 for i in range (batzuetan):
 print ("Kaixo", pertsona)
 ```
+
 Honela deitzen bazaio:
+
 ```python
 agurtu ("Neko", 2)
 ```
 
-Ikusiko litzateke:
+Pantailan ikusiko litzateke:
+
 ```
 Kaixo Neko
 Kaixo Neko
@@ -108,14 +122,16 @@ Aldiz, bigarren parametroa pasatzen ez badugu, `veces`ek lehenetsitako balioa ha
 agurtu ("Bug")
 ```
 
-Hau litzateke:
+Hau ikusiko litzateke:
+
 ```console
 Kaixo Bug
 Kaixo Bug
 Kaixo Bug
 ```
 
-Parametro infinituak
+## Parametro infinituak
+
 Python-en funtzioei esker, parametro kopuru zehaztugabea pasatzen diezu. Arraro samarra dirudi, baina baliagarria da.
 Imajinatu funtzio bat sortu nahi duzula, pasatzen dizkiozun**** parametro guztiak batuko dituena.
 
@@ -132,12 +148,14 @@ erreturn emaitza
 Erreparatzen badiguzu, `baloreak 'parametroa zehaztu dugu, aurretik zenbaki bat jarrita. Horrekin esan nahi dizugu ez dela parametro bakarra, edozein luzera izan dezakeen zerrenda baizik.
 
 Beraz, funtzio horri honela dei diezaiokegu:
+
 ```python
 batu (3, 4, 5) # 12
 batu (2, 45) # 47
 ```
 
 4.2 ariketa
+
 Idatz ezazu programa bat parametro mugagabeak edo dinamikoak jasotzen dituen batu izeneko funtzio batekin. Batzeko funtzioak parametroak hartu behar ditu, eta horiekin guztiekin testu bat itzuli, esaldi bat osatuz.
 
 ```python
@@ -151,13 +169,15 @@ return esaldia
 
 print ("Kaixo", "Zer", "Halakoa")
 ```
+
 Emaitza:
 
 ```console
 Kaixo, zer moduz?
 ```
 
-## Itzulera
+## Itzuli balioa
+
 Funtzioek beharrezkoak diren eragiketa guztiak egin ditzakete, baina emaitza bat itzultzen dutenean erabilgarriagoak dira.
 Horretarako, "itzuli" jarraibidea erabiltzen da, eta horrek datu jakin bat edo datu-egitura bat baino ezin du itzuli.
 
@@ -168,6 +188,7 @@ def suma (a, b):
 emaitza = a + b
 erreturn emaitza
 ```
+
 Pixka bat laburtu daiteke zuzenean:
 
 ```python
@@ -182,10 +203,12 @@ print (batura (40, 2)) # 42
 ```
 
 Gauza pare bat hartu behar dituzu kontuan, honako honekin:
+
 1- Behin `itzuli 'egiten denean, programa funtziotik ateratzen da.
 2- Funtzioan `itzuli 'bat baino gehiago izan dezakezu, baina horietako bat bakarrik exekutatuko da.
 
 4.3 ariketa
+
 Idatzi programa bat "zatitu" izeneko funtzio batekin, eta jaso itzazu parametro hauek: "berdin dio eta". Funtzioak bi zenbakien arteko zatiketa itzuli behar du.
 
 ```python
@@ -194,11 +217,13 @@ return a/b
 
 print (zatitu (32, 4))
 ```
+
 Emaitza:
 
 ```console
 8
 ```
+
 Beste adibide bat, balio bat hainbat aldiz biderkatzen duen funtzio bat. Kopurua 1 baino txikiagoa bada, 0 bat itzuliko du:
 
 ```python
@@ -224,7 +249,8 @@ for i in range (batzuetan):
 guztira = guztira* kopurua
 ```
 
-## Habia-deiak
+## Dei kabituak
+
 Ez izan funtzio-deiei habia egiteko beldurrik. Oso gauza naturala da programazioan.
 Imajinatu erabiltzaileari zenbaki bat eskatzeaz arduratzen den funtzio hau dugula eta sartutako zenbaki-ontzia itzultzen duela:
 
@@ -233,17 +259,20 @@ def lee zenbakia ():
 numero = input ("Idatzi zenbakia:")
 return int (zenbakia)
 ```
+
 Demagun beste funtzio bat ere badugula zenbakiak kentzeko:
 
 ```python
 def restar (a, b)
 return a - b
 ```
+
 Erabiltzaileari bi zenbaki eskatu eta kentzen dizkion programa bat egin nahi badugu, horrela egin genezake.
 
 ```python
 print (restar (leeNumero (), leeNumero ()))
 ```
+
 Zenbaki edo aldagai bat parametro gisa jarri beharrean, dei bat jar diezaiokegu funtzio bati.
 
 Funtzio horiek `irakurtzenZenbakia () ", balio batzuk itzuliko dituzte. Lehenengo "IrakurriZenbakia ()" deitu bezain laster, honela izango da:
@@ -251,6 +280,7 @@ Funtzio horiek `irakurtzenZenbakia () ", balio batzuk itzuliko dituzte. Leheneng
 ```python
 print (kendu (5, irakurriZenbakia ()))
 ```
+
 Eta gero, bigarrenari "IrakurriZenbakia ()" deitu ondoren:
 
 ```python
@@ -270,17 +300,19 @@ Eta, azkenik, a print deituko da eta emaitza ikusiko dugu:
 ```
 
 4.4 ariketa
+
 Idatzi bi funtzio. Zenbaki bat jaso eta zenbaki bera positiboan itzultzen duena.
 
 Emaitza positiboa (balioa)
 
 Eta bi zenbaki jaso eta horien arteko potentzia kalkulatzen duen beste funtzio bat.
 
-`potentzia (balorazioa 1, balorazioa 2)
+`potentzia (balorazioa 1, balorazioa 2)`
 
 Bigarren funtzioari deitu behar diozu, parametro hauek kontuan hartuta:
 
-`potentzia (positiboa (-5), positiboa (4)
+`potentzia (positiboa (-5), positiboa (4)``
+
 Oharra: ez erabili aurretik zeuden funtzioak.
 
 ```python
@@ -298,6 +330,7 @@ print (potentzia (2, 3))
 print (potentzia (positiboa (2), positiboa (4)))
 potentzia (positiboa (-5), positiboa (4))
 ```
+
 Emaitza:
 
 ```console
@@ -305,7 +338,8 @@ Emaitza:
 8
 16
 ```
-Zergatik erabili funtzioak?
+
+## Zergatik erabili funtzioak?
 
 Zertarako sortu behar ditugu funtzioak? Bada, egia esan... funtsezkoak dira.
 
@@ -313,11 +347,13 @@ Orain arte, agindu-sekuentzia soil bat diren programak ikusi ditugu, hasieratik 
 
 Hori ondo dago programak sinpleak direnean eta gauza gutxi egin behar dituztenean, baina programak zerbait konplexuagoa egin behar duenean, litekeena da funtzioak erabili behar izatea, hainbat arrazoirengatik.
 
-0 arrazoia: zatitu eta irabaziko duzu
+### 0 arrazoia: zatitu eta irabaziko duzu
+
 Programak arazoak konpontzen saiatzen dira, konponbide bat eskainiz. Batzuetan arazoak oso konplexuak izan daitezke aurre egiteko. Funtzioek arazo horiei zatika heltzeko aukera ematen dizute. Funtzio bakoitzak arazoaren zati baterako konponbidea eman diezazuke. Beraz, arazoa arazo txiki askotan bana dezakezu eta arazo bakoitza funtzio batekin konpon dezakezu.
 Jarduneko kodea idaztea programa konplexuagoak diseinatzeko lehen urratsa da.
 
-##  # 1. arrazoia: kodea ez errepikatzea
+###  1. arrazoia: kodea ez errepikatzea
+
 Zure programak zerbait egin behar badu hainbat aldiz, kodea behar beste aldiz errepikatu beharko zenuke. Imajinatu erabiltzailearen hainbat datu jaso behar dituzula, eta hori egiten duzun bakoitzean datua hutsik ez dagoela egiaztatu behar duzula:
 
 ```python
@@ -328,12 +364,14 @@ dato = input ("Mesedez, sartu datu bat:")
 if dato = = "":
 print ("Datua hutsik dago!)
 ```
+
 Erabiltzaileari 3 datu eskatzen badizkiozu, kode hori 3 aldiz errepikatu beharko zenuke! Aldiz, kode bera duen funtzio bat sortzen baduzu, behin bakarrik idatzi beharko duzu, eta gero behar adina aldiz erabili ahal izango duzu.
 
 Oharra: kodea ez errepikatzea da programatzaile on orok jarraitu beharreko araurik garrantzitsuenetako bat.
 3. araua ere aplika dezakezu. Zerbait errepikatu behar duzun hirugarren aldian, automatizatu egin behar duzu.
 
-##  # 2. arrazoia: berrerabili kodea
+###  2. arrazoia: berrerabili kodea
+
 Kodea ez errepikatzeaz gain, funtzio batek aukera ematen digu kode berak hainbat datu-motatarako balio dezan. Horretarako erabiltzen dira parametroak!
 
 ```python
@@ -341,12 +379,14 @@ def agurtu (agurra, batzuetan):
 for i in range (batzuetan):
 print (agurra)
 ```
+
 Balio desberdinekin dei dakioke:
 
 ```python
 agurtu ("Holi", 3)
 agurtu ("Aupa", 1)
 ```
+
 Hau litzateke:
 
 ```console
@@ -356,18 +396,22 @@ Holi
 Aupa
 ```
 
-##  3. arrazoia: mantentze-lanak erraztea
+###  3. arrazoia: mantentze-lanak erraztea
+
 Kodea leku bakar batean badago, errazagoa da zuzentzea, aldatzea, hobetzea eta orokorrean mantentzea. Programa bat zerotik sortzea oso polita da, baina benetako lana kodea denboran zehar mantentzea da.
 Gure funtzioak ondo zehaztuak baditugu,* muuuuucho* lana aurreztuko dugu.
 
-4. arrazoia: testak egiteko aukera ematen du
+### 4. arrazoia: testak egiteko aukera ematen du
+
 Agian gazte samarra zara honetarako, baina nik bezala gure programak probatzen ditugu. Zer esan nahi du horrek? Gure programek behar dutena egiten dutela egiaztatzea helburu bakarra duten programak idazten ditugula.
 Zure kodeak funtzioak baditu, testak idatzi ahal izango dituzu funtzio horiek behar dutena egiten dutela egiaztatzeko.
 
 Berez, aditua zarenean, zure eginkizuna bera baino lehen testa idaztea da zurea!
 
 ## Nola egin funtzio onak
+
 Edonork idatz ditzake funtzioak eta kodea zati txikitan taldekatu. Baina pro gisa funtzioak idatzi nahi badituzu, honako hau lortu behar duzu:
+
 - Funtzio batek gauza bakarra egin behar du. Hobe da funtzio txiki asko izatea, gauza asko egiten dituzten funtzio gutxi izatea baino. Zure funtzioa pantailan sartzen ez bada edo 24 lerro gainditzen baditu, agian zati txikitan banatu beharko duzu.
 - Funtzio batek ez luke kanpoan dagoen ezer aldatu behar. Ezustekorik izan nahi ez baduzu, funtzio batek ez luke programaren barruan bildu behar.
 - Funtzio batek zerbait itzuli beharko luke, eta horrek beti berdina izan beharko luke parametro jakin batzuetarako.
@@ -391,6 +435,7 @@ print ("Diferentzia da:", diferentzia)
 aldea (10, 5)
 aldea (4, 12)
 ```
+
 Emaitza:
 
 ```console
@@ -399,6 +444,7 @@ Aldea hau da: 8
 ```
 
 4.1 ariketa
+
 Idatzi bi zenbaki eta eragiketa-zeinu aritmetiko bat jasotzen dituen programa bat: +, -,*, /. Funtzioak eragiketa horren emaitza itzuli behar du bi zenbakien artean.
 
 ```python
@@ -418,6 +464,7 @@ print (emaitza)
 emaitza = kalkulatu (4, 3, "@")
 print (emaitza)
 ```
+
 Emaitza:
 
 ```console
@@ -427,7 +474,9 @@ Eragiketa ezezaguna
 ```
 
 4.2 ariketa
-`def saludo (momentoDelDia)
+
+`def saludo (momentoDelDia)`
+
 Funtzio honek parametro gisa eguneko une bat hartzen du: "goiz", "arratsalde" edo "gau", eta dagokion agurra itzuli behar du: "Egun on", "Arratsalde on", eta "Gau on", hurrenez hurren.
 
 ```python
@@ -448,6 +497,7 @@ return {
 
 print (osasuna2 ("arratsaldez"))
 ```
+
 Emaitza:
 
 ```console
@@ -456,7 +506,8 @@ Arratsalde on.
 ```
 
 4.3 ariketa
-`hasiZenbakiarekin (zenbakiak, zenbakia )»
+
+`hasiZenbakiarekin (zenbakiak, zenbakia)`
 
 Funtzio honek array zenbakien elementu guztiak parametro gisa pasatzen dugun zenbakiarekin hasi behar ditu.
 
@@ -472,6 +523,7 @@ def hasiConNumero1 (luzera, zenbakia): return [zenbakia]* luzera
 print (hasiZenbakiarekin (10, 3))
 print (hasiConNumero1 (10, 3))
 ```
+
 Emaitza:
 
 ```console
@@ -480,7 +532,9 @@ Emaitza:
 ```
 
 4.4 ariketa
-`def aleatorioa (gehienez)
+
+`def aleatorioa (gehienez)`
+
 Funtzio horrek 0 eta parametro gisa pasatzen den gehieneko balioaren arteko ausazko zenbaki bat itzuli behar du.
 
 ```python
@@ -491,12 +545,15 @@ return random.randint (0, max)
 
 print (ausazkoa (5))
 ```
+
 Emaitza:
 
 ```console
 3
 ```
+
 4.5 ariketa
+
 Izena (silabak)
 
 Silaba kopuru bat dela eta, ausazko izen bat sortzen duen funtzio bat (kontsonanteak eta bokalak txandakatu). Aurreko ekitaldiko funtzioa erabil dezakezu.
@@ -521,13 +578,16 @@ return izena
 
 print (sortu izena (3))
 ```
+
 Emaitza:
 
 ```console
 xamozu
 ```
+
 4.6 ariketa
-`def crearPassword (length)
+
+`def crearPassword (length)`
 
 Luzera bat emanda, zorizko karaktereak dituen string bat sortzen duen funtzioa. Karakteredun* string* array bat erabil dezakezu, eta ausazko karaktereak atera arraytik, izen bat sortzeko. Ausazko zenbakiak sortzeko:
 
@@ -551,6 +611,7 @@ return password
 
 print (sortuPassword (8))
 ```
+
 Emaitza:
 
 ```console
@@ -558,7 +619,9 @@ _! 5_flg $
 ```
 
 4.7 ariketa
+
 Sortu `faktura 'izeneko funtzioa (produktuak, kopuruak, prezioak), tamaina bereko hiru array jasotzen dituena, honako eduki hauekin:
+
 1. `produktuak: produktuen izenak.
 2. `kantitatea: zenbaki osoak, kantitatea adierazita.
 3. `prezioa: zenbaki hamartarrak, produktu bakoitzaren prezioa adierazita.
@@ -586,6 +649,7 @@ fakturaren erreturn
 Faktura, guztira = faktura (["Ogia", "Arrautzak", "Irina"], [1,6,2], [1.2, 0.2, 0.8])
 print (guztiraFaktura)
 ```
+
 Emaitza:
 
 ```console
@@ -600,9 +664,10 @@ Guztira: 4.0
 ```
 
 4.8 ariketa
+
 Hau zailagoa izango da. Jolasetako pertsonaiak sortzeko funtzio bat duen programa bat sortzen du.
 
-`def crearAtributos (mailaKonpentsazioa)
+`def crearAtributos (mailaKonpentsazioa)`
 
 Funtzio horrek hiru aldagai definitu behar ditu: indarra, abiadura eta adimena. Programak 20 puntu banatu behar ditu hiru aldagaien artean. Bestela esanda, hiru aldagaien artean 20 batu behar dira. `￮ mailaKonpentsazioa 'parametroak balio behar du puntu oso bereiziak edo berdinduak banatzen diren adierazteko, balio desorekatuena zenbat eta handiagoa izan, hau da, atributuen arteko aldea handiagoa da; nola egin programatzailearen kontua da.
 
@@ -648,6 +713,7 @@ print ("Abiadura:", abiadura)
 Atributuak sortu (3)
 
 ```
+
 Emaitza:
 
 ```console
