--- a/book_eu/05.md
+++ b/book_eu/05.md
@@ -138,7 +138,7 @@ Honela ikusiko litzateke:
 Purrrr
 Miau, Lucifur naiz.
 ```
-##  #super ()
+## super ()
 Azpiklase bat edo klase bat beste baten alaba sortzen duzunean, heredatzen duzun ikasgelatik `super () "funtzioa erabil dezakezu oinordetzan hartutako klasearen funtzioei deitzeko.
 Adibidez, aurreko kasuan, `Cachorroere 'azpimailatik berezko eraikitzaile bat gehi genezake, eta `Gatoere' superklasearen eraikitzaileari ere dei diezaiokegu:
 
