--- a/book_eu/06.md
+++ b/book_eu/06.md
@@ -79,7 +79,7 @@ hainbat lerrokoa
 Eta irakur daiteke
 oso erraz
 ```
-##  #Lerroz lerro irakurtzen?
+## Lerroz lerro irakurtzen?
 Aurreko adibidean, bat-batean irakurri dugu fitxategiaren eduki osoa, testu-aldagai batean gordeta. Baina batzuetan, baliteke online fitxategia irakurri nahi izatea. Horretarako, honako funtzio hau erabili behar dugu:
 ```python
 fitxategia = open ("texto.txt", "r")
